--- a/Media Lib/Media Lib.vcxproj
+++ b/Media Lib/Media Lib.vcxproj
@@ -138,6 +138,9 @@
     <ClInclude Include="Function.h" />
     <ClInclude Include="Media.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="output.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
