--- a/Media Lib/Media Lib.vcxproj.filters
+++ b/Media Lib/Media Lib.vcxproj.filters
@@ -38,4 +38,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="output.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
