--- a/Media Lib/Media Lib.vcxproj
+++ b/Media Lib/Media Lib.vcxproj
@@ -127,18 +127,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Book.cpp" />
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Media.cpp" />
+    <ClCompile Include="Movie.cpp" />
+    <ClCompile Include="Song.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="mediaList.csv" />
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="Book.h" />
     <ClInclude Include="Function.h" />
     <ClInclude Include="Media.h" />
+    <ClInclude Include="Movie.h" />
+    <ClInclude Include="Song.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="mediaList.txt" />
     <Text Include="output.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
